--- a/src/components/PieChart/PieChart.scss
+++ b/src/components/PieChart/PieChart.scss
@@ -1,7 +1,14 @@
 .Piechart {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
   height: 100%;
+  justify-content: space-around;
+}
+
+.pie-no-movements {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
 }
