--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -13,14 +13,14 @@
   .modal-container {
     background: $pure-white;
     border-radius: 3px;
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 8px 3px rgba(0, 0, 0, 0.75);
     height: auto;
     left: 50%;
+    min-width: 260px;
     opacity: 0;
     position: fixed;
     top: 50%;
     transform: translate(-50%, -50%);
-    min-width: 260px;
     width: 0;
 
     .head {
@@ -58,13 +58,12 @@
     }
 
     &.positive {
-      border-top: 4px solid $green;
-      border-bottom: 4px solid $green;
+      border-top: 8px solid $green;
+      //border-bottom: 4px solid $green;
     }
 
     &.negative {
-      border-top: 4px solid $red;
-      border-bottom: 4px solid $red;
+      border-top: 8px solid $red;
     }
   }
 
