--- a/src/pages/Categories/Categories.scss
+++ b/src/pages/Categories/Categories.scss
@@ -13,6 +13,10 @@
     padding: 20px 10px 10px;
     width: 100%;
   }
+  .no-category {
+    @include flex-center-all;
+    padding: 50px 20px;
+  }
 }
 
 @media only screen and (max-width: 768px) {
