--- a/src/pages/Signin/Signin.scss
+++ b/src/pages/Signin/Signin.scss
@@ -9,6 +9,7 @@
     border-radius: 4px;
     max-width: 270px;
     width: 100%;
+    background-color: $pure-white;
 
     .body {
       flex-direction: column;
