--- a/src/components/AddMovement/AddMovement.scss
+++ b/src/components/AddMovement/AddMovement.scss
@@ -5,11 +5,14 @@
   @include flex-center-all;
   flex-direction: column;
   width: 100%;
+  padding-top: 20px;
 
   .title {
     @include flex-center-all;
     cursor: default;
-    height: 50px;
+    display: none;
+    font-size: 20px;
+    height: 40px;
     margin-bottom: 10px;
     transition: all 2s;
     width: 100%;
