--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,7 +2,7 @@
 @import './src/utils/mixins.scss';
 
 .Header {
-  background-color: $grey;
+  background-image: linear-gradient(to left, $deep-blue, $blue);
   box-shadow: 0px -9px 9px 9px rgba(0, 0, 0, 0.75);
   display: flex;
   height: 50px;
@@ -61,7 +61,7 @@
       padding: 8px 0;
       position: absolute;
       right: 0;
-      top: 50px;
+      top: 33px;
       width: 150px;
 
       li {
