--- a/src/App.scss
+++ b/src/App.scss
@@ -22,8 +22,9 @@
   }
 }
 
-.logged {
+.App.logged {
   background-color: $pure-white;
+  background-image: none;
 }
 
 @media only screen and (min-width: 960px) {
@@ -40,11 +41,12 @@
   }
 }
 
-html {
+.App {
   background-image: radial-gradient(circle, $blue, $deep-blue);
+  height: calc(100vh - 100px);
 }
 
-html, body, #root, .App {
+html, body, #root {
   height: 100%;
 }
 
