--- a/src/components/EditCategory/EditCategory.scss
+++ b/src/components/EditCategory/EditCategory.scss
@@ -1,13 +1,7 @@
 @import "../../utils/mixins.scss";
 
-.EditMovement {
+.EditCategory {
   @include flex-center-all;
   flex-direction: column;
   width: 100%;
-  padding-top: 20px;
-
-  .category {
-    margin-top: 16px;
-    width: 75%;
-  }
 }
